[gd_scene load_steps=3 format=2]

[ext_resource path="res://collision_die.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.97, 10 )

[node name="BlockCollisionDie" type="Node2D"]

[node name="AreaDie001" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionDie001" type="CollisionShape2D" parent="AreaDie001"]
shape = SubResource( 1 )
[connection signal="body_entered" from="AreaDie001" to="AreaDie001" method="_on_AreaDie001_body_entered"]
