[gd_scene load_steps=36 format=2]

[ext_resource path="res://images/boss1/strangerNinja/Dead__000.png" type="Texture" id=1]
[ext_resource path="res://images/boss1/strangerNinja/Dead__001.png" type="Texture" id=2]
[ext_resource path="res://images/boss1/strangerNinja/Dead__003.png" type="Texture" id=3]
[ext_resource path="res://images/boss1/strangerNinja/Dead__004.png" type="Texture" id=4]
[ext_resource path="res://images/boss1/strangerNinja/Dead__005.png" type="Texture" id=5]
[ext_resource path="res://images/boss1/strangerNinja/Dead__002.png" type="Texture" id=6]
[ext_resource path="res://images/boss1/strangerNinja/Dead__006.png" type="Texture" id=7]
[ext_resource path="res://images/boss1/strangerNinja/Dead__007.png" type="Texture" id=8]
[ext_resource path="res://images/boss1/strangerNinja/Dead__008.png" type="Texture" id=9]
[ext_resource path="res://images/boss1/strangerNinja/Run__005.png" type="Texture" id=10]
[ext_resource path="res://images/boss1/strangerNinja/Run__007.png" type="Texture" id=11]
[ext_resource path="res://images/boss1/strangerNinja/Run__003.png" type="Texture" id=12]
[ext_resource path="res://images/boss1/strangerNinja/Run__006.png" type="Texture" id=13]
[ext_resource path="res://images/boss1/strangerNinja/Run__008.png" type="Texture" id=14]
[ext_resource path="res://images/boss1/strangerNinja/Run__001.png" type="Texture" id=15]
[ext_resource path="res://images/boss1/strangerNinja/Idle__000.png" type="Texture" id=16]
[ext_resource path="res://images/boss1/strangerNinja/Idle__004.png" type="Texture" id=17]
[ext_resource path="res://images/boss1/strangerNinja/Idle__001.png" type="Texture" id=18]
[ext_resource path="res://images/boss1/strangerNinja/Idle__005.png" type="Texture" id=19]
[ext_resource path="res://images/boss1/strangerNinja/Dead__009.png" type="Texture" id=20]
[ext_resource path="res://images/boss1/strangerNinja/Idle__007.png" type="Texture" id=21]
[ext_resource path="res://images/boss1/strangerNinja/Idle__009.png" type="Texture" id=22]
[ext_resource path="res://images/boss1/strangerNinja/Run__009.png" type="Texture" id=23]
[ext_resource path="res://images/boss1/strangerNinja/Run__004.png" type="Texture" id=24]
[ext_resource path="res://images/boss1/strangerNinja/Run__002.png" type="Texture" id=25]
[ext_resource path="res://images/boss1/strangerNinja/Run__000.png" type="Texture" id=26]
[ext_resource path="res://images/boss1/strangerNinja/Idle__002.png" type="Texture" id=27]
[ext_resource path="res://images/boss1/strangerNinja/Idle__006.png" type="Texture" id=28]
[ext_resource path="res://images/boss1/strangerNinja/Idle__008.png" type="Texture" id=29]
[ext_resource path="res://images/boss1/strangerNinja/Idle__003.png" type="Texture" id=30]
[ext_resource path="res://collision_die.gd" type="Script" id=31]
[ext_resource path="res://boss1.gd" type="Script" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 29 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 24 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 20 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 130.589, 196.658 )

[node name="boss1" type="StaticBody2D"]
scale = Vector2( 0.395642, 0.422984 )
script = ExtResource( 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="die_collision_boss1" type="Area2D" parent="."]
script = ExtResource( 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="die_collision_boss1"]
shape = SubResource( 3 )
[connection signal="body_entered" from="die_collision_boss1" to="die_collision_boss1" method="_on_die_collision_boss1_body_entered"]
